Fixed comment workflow form fields alignment

--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -1569,3 +1569,19 @@ span[id^=title_folding_] {
 		}
 	}
 }
+
+// Comment Workflow
+.comment-workflow-form {
+	display: flex !important;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	.controls {
+		display: flex !important;
+		flex-direction: row;
+		align-items: center;
+		> * {
+			margin-left: 6px;
+		}
+	}
+}
